--- a/.github/workflows/build-kernel-a12.yml
+++ b/.github/workflows/build-kernel-a12.yml
@@ -29,6 +29,8 @@ jobs:
             os_patch_level: 2024-05
           - sub_level: 218
             os_patch_level: 2024-08
+          - sub_level: 226
+            os_patch_level: lts
     uses: ./.github/workflows/gki-kernel.yml
     secrets: inherit
     with:
